--- a/mediapipe/calculators/tflite/BUILD
+++ b/mediapipe/calculators/tflite/BUILD
@@ -80,15 +80,15 @@ mediapipe_proto_library(
     ],
 )
 
-# mediapipe_proto_library(
-#     name = "tflite_yolo_tensors_to_dummy_calculator_proto",
-#     srcs = ["tflite_yolo_tensors_to_dummy_calculator.proto"],
-#     visibility = ["//visibility:public"],
-#     deps = [
-#         "//mediapipe/framework:calculator_options_proto",
-#         "//mediapipe/framework:calculator_proto",
-#     ],
-# )
+mediapipe_proto_library(
+    name = "tflite_yolo_tensors_to_dummy_calculator_proto",
+    srcs = ["tflite_yolo_tensors_to_dummy_calculator.proto"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//mediapipe/framework:calculator_options_proto",
+        "//mediapipe/framework:calculator_proto",
+    ],
+)
 
 mediapipe_proto_library(
     name = "tflite_tensors_to_classification_calculator_proto",
@@ -469,7 +469,7 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//mediapipe/util/tflite:config",
-        # ":tflite_yolo_tensors_to_dummy_calculator_cc_proto",
+        ":tflite_yolo_tensors_to_dummy_calculator_cc_proto",
         "//mediapipe/framework/formats:detection_cc_proto",
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:span",
