--- a/mediapipe/surfnet/models/BUILD
+++ b/mediapipe/surfnet/models/BUILD
@@ -2,4 +2,6 @@ exports_files(["ssdlite_object_detection.tflite"])
 
 exports_files(["ssdlite_object_detection_labelmap.txt"])
 
+exports_files(["labelmap_yolo.txt"])
+
 exports_files(["yolov5s-fp16.tflite"])
