--- a/mediapipe/surfnet/models/BUILD
+++ b/mediapipe/surfnet/models/BUILD
@@ -1,7 +1,15 @@
-exports_files(["ssdlite_object_detection.tflite"])
-
-exports_files(["ssdlite_object_detection_labelmap.txt"])
-
 exports_files(["labelmap_yolo.txt"])
 
 exports_files(["yolov5s-fp16.tflite"])
+
+exports_files(["yolo_21062022-int8.tflite"])
+
+exports_files(["yolov5s-fp16-optimize.tflite"])
+
+exports_files(["yolov5s-int8-optimize.tflite"])
+
+exports_files(["yolov5s-int8.tflite"])
+
+exports_files(["yolov7-tiny.tflite"])
+
+exports_files(["yolov7-tiny-optim.tflite"])
