update graph to get full tracking

--- a/mediapipe/surfnet/models/BUILD
+++ b/mediapipe/surfnet/models/BUILD
@@ -9,3 +9,5 @@ exports_files(["yolov5s-fp16-optimize.tflite"])
 exports_files(["yolo_surfnet-fp16.tflite"])
 
 exports_files(["yolo_surfnet_fix.tflite"])
+
+exports_files(["yolo_pau-fp16.tflite"])
